--- a/index.Rmd
+++ b/index.Rmd
@@ -12,7 +12,7 @@ github-repo: rstudio/bookdown-demo
 description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
 ---
 
-# How to Install R
+# How to Install R {#download}
 
 This is the EMaC manual for how to wrangle, analyze, and visualize data in **R**. I will review a few key packages, in addition to explaing their key functions, with real data examples. 
 
