Update the book

--- a/bookdown-demo.tex
+++ b/bookdown-demo.tex
@@ -313,7 +313,8 @@ TRUE\strut
 
 ```
 
-\chapter{Literature}\label{literature}
+\chapter{Introduction to Data
+Wrangling}\label{introduction-to-data-wrangling}
 
 Here is a review of existing methods.
 
