--- a/bookdown-demo.Rmd
+++ b/bookdown-demo.Rmd
@@ -11,19 +11,6 @@ link-citations: yes
 github-repo: rstudio/bookdown-demo
 description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
 ---
---- 
-title: "The EMaC R Manual"
-author: "Alex Sciuto"
-date: "Last Updated Febuary 2020"
-site: bookdown::bookdown_site
-output: bookdown::gitbook
-documentclass: book
-bibliography: [book.bib, packages.bib]
-biblio-style: apalike
-link-citations: yes
-github-repo: rstudio/bookdown-demo
-description: "This is a minimal example of using the bookdown package to write a book. The output format for this example is bookdown::gitbook."
----
 
 # How to Install R {#download}
 
@@ -35,18 +22,88 @@ There are two things you need to do to install R on your computer. First, you wo
 
 <!--chapter:end:index.Rmd-->
 
-
 # Introduction to Programming in R {#intro}
 
-Placeholder
-
+Before you can do data wrangling, statiscs, and visualization using R for cognitive psychology research, you need to learn the basic syntax in R. This chapter will introduce the basics.
 
 ## Variables in R
+
+R can manipulate and wrangle all kinds of data, these data could be stored in a handful of variables that we can then work with. The first one we will be talking about is numeric. 
+
 ### Numeric
+
+a numeric is a number (including decimals) that can be stored within a variable. Here is an example:
+
+***` x = 2 `***
+
+Here, we assigned the numeric value `2` to the variable `x`. Thus, if we were to do arithemtic, `x` will be treated as `2`. Moreover, there are specific functions in R we can use in order to do arithmetic with numeric variables. Here are a few examples:
+
+| Arithemtic | R-Input   | R-Output   |    
+| :-------------: |:-------------:|:---:|
+| Addition: | `x + 2`|`4`|
+| Substraction: | `x - 2 `|`0`|
+| Division:  | `x / 2  `|`1`|
+| Multiplication: |`x * 2`|`4`|
+| Exponent: | `x ^ 2 `|`4`|
+
+
+
 ### Character
+
+A character is a combination of characters (either letters and/or numbers) that can be stored within a variable. Moreover, it is very important that you place the character between quotation marks. Here is an example:
+
+***`x = "Cognitive Psychology"`***
+
+Here, we assigned the character value `"Cognitive Psychology"` to the variable `x`. There are ways to manipulate character type variables, and also modify them. However, we will touch on that later.
+
 ### Logical 
+
+A logical can only have two possible values, `TRUE` and `FALSE` that can be stored within a variable. This is not typically a varaible type that you will need to assign variable values to. However, the logical type variable is extremely important becuase a lot of functions in R return a logical variable. We will dive into some of these functions 
+
 ### Vector 
+
+A vector is multiple variables stored into one data-set. Vectors can contain any variable type: character, numeric, string, and logical. When you are declaring a a vector type variable, you typically have to use the concatenate function `c()`. Here is an example:
+
+`x = c(1,2,3,4)`
+
+`x = c("I", "like", "Cognitive", "Psychology")`
+
+`x = c(TRUE, FALSE, FALSE, TRUE)`
+
+To reference a vector varaible, you need to use `[]` and inside the brackets, you have to specify the index of where the given variable in the vector is. Here is an example
+
+```{r}
+x = c("10", "20", "30", "40")
+x[4]
+```
+
+Here, we assigned the numbers: `10, 20, 30, 40` to the vector `x`. `"Cognitive Psychology"` to the variable `x`. There are ways to manipulate character type variables, and also modify them. However, we will touch on that later.
+
 ## Logical Operators & if-Statements
+
+Now that you have a basic understanding of how variables work in R, the next step is to learn how to use logical operators in order to specifiy what are the specific conditions under which you want your variables to be manipulated. The main way to do this in R is by using logical operators. 
+
+***` x = 2 `***
+
+Here, we assigned the numeric value `2` to the variable `x`. Thus, if we were to apply logical operators to `x`, `x` will be treated as `2`. Here are examples of all of the logical operators:
+
+| Logical Operators      | Description   |   R-Input   | R-Output|  
+| ------------- |:-------------:|:--:|:--:|
+| <     | less than | x < 10 | TRUE |
+| <=     | less than or equal to |x <= 2| TRUE|
+| > | greater than    | x > 1| TRUE|
+| >= | greater than or equal to |x >= 3| FALSE| 
+| == | exactly equal to | x == 9| FALSE|
+| != | not equal to    | x != 10| FALSE|
+| !x| 	Not x  | !x | FALSE|
+| x \|\ y | x OR y    | x == 10 \|\ x != 10|TRUE|
+| x & y  | 	x AND y | x == 10 &x != 10|FALSE|
+
+Now that you have a basic understanding of logical operators, we can use them in order to specify code to manipulate variables in a particular way. For this example, we will be working with the function `if_else()`. However, one question you may have is what is a function in R? I will describe the structure of functions, starting with a simple one. 
+
+
+
+
 
 <!--chapter:end:01-intro.Rmd-->
 
@@ -66,10 +123,17 @@ On each trial in this experiment (n = 174), each participant (n = 84) sees a tar
 Before we start wrangling the data, we need to load in the packages we are using. In this lab, most of the data wrangling tools we will be using will be located in the `tidyverse()` package. What is a package? It is simply a group of functions that group of developers made that makes computations easier. To learn more about the `tidyverse()` package, you may click on this [link](https://www.tidyverse.org/) and read on it! For the data wrangling we will be doing in this section, we will be primarily using a package within tidyverse called `dplyr()`. to load in the package, simply type in the following code. What this code is saying is IF you don't have the `tidyverse()` installed, THEN install the package. After that, load the `tidyverse()` with the `library()` function.
 
 ```{r eval = FALSE, message = FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+knitr::opts_knit$set(root.dir = "C:/Users/alexs/Documents/Github/Emac_Rmanual/") 
+
+```
+
+```{r}
 if(!require(tidyverse)){
     install.packages("tidyverse")
 }
 library(tidyverse) 
+
 ```
 
 ### setting the working directory
@@ -77,7 +141,10 @@ library(tidyverse)
 Now that we have the packages that we need, we need to load up our directory. What is a directory? It is essentially the folder we will be using to read in files, or export files into. In this directory, we have our data set of interest, `Topgown_Data`
 
 ```{r eval = FALSE, message = FALSE}
-setwd("C:/Users/alexs/Documents/Github/Emac_Rmanual/TopGown/")
+setwd("C:/Users/alexs/Documents/Github/Emac_Rmanual/")
+
+library(knitr)
+library(kableExtra)
 ```
 
 ### Reading in Data
@@ -85,13 +152,11 @@ setwd("C:/Users/alexs/Documents/Github/Emac_Rmanual/TopGown/")
 Now that we have our working directory set we can use the `read_csv()` function which requires one minimum argument to work which is the name of your `.csv` file. Here we are setting the variable `mydata` to the contents within the `.csv` file. It stores the contents of `Topgown_Data.csv` in what is called a data frame. What is a dataframe? it is simply a matrix where each row constitutes a variable (which can be any type you want), and rows are observations.
 
 ```{r}
-mydata = read.csv("Topgown_Data.csv")
+mydata = read_csv("TopGown_Data.csv")
 ```
 
 ```{r echo = FALSE}
-knitr::kable(mydata) %>%
-  kable_styling("striped", full_width = F) %>%
-  scroll_box(height = "200px")
+knitr::kable(mydata)
 ```
 
 <!--chapter:end:02-literature.Rmd-->
