Update the book

--- a/bookdown-demo.tex
+++ b/bookdown-demo.tex
@@ -143,7 +143,7 @@ studio is the graphic user interface (GUI) where you can place all of
 your R-code. Follow this link:
 \href{https://rstudio.com/products/rstudio/download/}{R-Studio Desktop
 Download}. Once you have these two programs installed, all you need to
-do is launch R-studio Desktop and you are ready to go.
+do is launch R-studio Desktop and you are ready to go..
 
 \chapter{Introduction to Programming in R}\label{intro}
 
@@ -280,43 +280,6 @@ way. For this example, we will be working with the function
 \texttt{if\_else()}. However, one question you may have is what is a
 function in R? I will describe the structure of functions, starting with
 a simple one.
-
-\begin{longtable}[]{@{}clccc@{}}
-\toprule
-\begin{minipage}[b]{0.08\columnwidth}\centering\strut
-function: if you give an input, the function will do some computation
-and return an output\strut
-\end{minipage} & \begin{minipage}[b]{0.17\columnwidth}\raggedright\strut
-arguments: this is the structure of how the input is recieved, every
-function has preference\strut
-\end{minipage} & \begin{minipage}[b]{0.19\columnwidth}\centering\strut
-output: this is what the function returns\strut
-\end{minipage} & \begin{minipage}[b]{0.06\columnwidth}\centering\strut
-input\strut
-\end{minipage}\tabularnewline
-\midrule
-\endhead
-\begin{minipage}[t]{0.08\columnwidth}\centering\strut
-max(): this function finds the maximum number in a numeric vector\strut
-\end{minipage} & \begin{minipage}[t]{0.17\columnwidth}\raggedright\strut
-(c(1,2,3,4)): parameters are the things you input into teh function to
-get a specified output\strut
-\end{minipage} & \begin{minipage}[t]{0.19\columnwidth}\centering\strut
-less than\strut
-\end{minipage} & \begin{minipage}[t]{0.06\columnwidth}\centering\strut
-x \textless{} 10\strut
-\end{minipage} & \begin{minipage}[t]{0.06\columnwidth}\centering\strut
-TRUE\strut
-\end{minipage}\tabularnewline
-\bottomrule
-\end{longtable}
-
-```
-
-\chapter{Introduction to Data
-Wrangling}\label{introduction-to-data-wrangling}
-
-Here is a review of existing methods.
 
 \chapter{Methods}\label{methods}
 
