--- a/02-literature.Rmd
+++ b/02-literature.Rmd
@@ -18,6 +18,9 @@ knitr::opts_chunk$set(echo = TRUE)
 knitr::opts_knit$set(root.dir = "C:/Users/alexs/Documents/Github/Emac_Rmanual/") 
 
 library(knitr)
+if(!require(tidyverse)){
+    install.packages("kableExtra")
+}
 library(kableExtra)
 library(tidyverse)
 
